--- a/Sistema de Restaurantes/Sistema de Restaurantes.csproj
+++ b/Sistema de Restaurantes/Sistema de Restaurantes.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Home\index.cshtml" />
+    <Content Remove="Views\Shared\navbar.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
@@ -15,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Home\" />
-    <Folder Include="Views\Shared\" />
+    <None Include="Views\Home\index.cshtml" />
+    <None Include="Views\Shared\navbar.cshtml" />
   </ItemGroup>
 
 </Project>
