--- a/Sistema de Restaurante/Sistema de Restaurante.csproj
+++ b/Sistema de Restaurante/Sistema de Restaurante.csproj
@@ -5,6 +5,7 @@
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
     <IsPackable>false</IsPackable>
+    <RootNamespace>Sistema_de_Restaurante</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
