Adicionado swagger no contexto

--- a/Sistema de Restaurante/package.json
+++ b/Sistema de Restaurante/package.json
@@ -51,6 +51,10 @@
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.2",
     "style-loader": "0.18.2",
+    "swagger-converter": "^1.4.1",
+    "swagger-editor": "^2.9.2",
+    "swagger-test-templates": "^1.2.0",
+    "swagger-tools": "^0.10.1",
     "to-string-loader": "1.1.5",
     "typescript": "2.4.1",
     "url-loader": "0.5.9",
