--- a/Sistema de Restaurante/Sistema de Restaurante.csproj
+++ b/Sistema de Restaurante/Sistema de Restaurante.csproj
@@ -8,9 +8,15 @@
     <RootNamespace>Sistema_de_Restaurante</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netcoreapp2.0\SistemadeRestauranteAPI.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="2.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="2.5.0" />
   </ItemGroup>
 
   <ItemGroup>
